Fixed menu overlap

--- a/html/new/index.css
+++ b/html/new/index.css
@@ -58,6 +58,7 @@ h1 {
   margin-top: 10.0vw;
   margin-right: 5.0vw;
   margin-bottom: 0.0vw;
+  z-index: -1;
 }
 
 .down-arrow {
@@ -91,7 +92,6 @@ h1 {
   margin-right: 5.5vw;
   margin-bottom: 0.0vw;
   display: inline-block;
-  z-index: 1;
   position: relative;
   top: -4.0vw;
 }
@@ -156,6 +156,7 @@ h1 {
 
 .navbar {
   position: sticky;
+  z-index: 2;
   background-color: var(--accent-1);
   color: #000;
   height: 50px;
@@ -195,7 +196,6 @@ h1 {
   margin-right: 5px;
   margin-bottom: 5px;
   text-align: center;
-  z-index: 3;
 }
 
 .navbar a{
@@ -246,7 +246,6 @@ h1 {
   position: absolute;
   top: 4px;
   right: 5px;
-  z-index: 1;
   width: 35px;
   height: 35px;
   color: #fff;
@@ -259,7 +258,7 @@ h1 {
   
   .navbar-links {
     display: none;
-    position: fixed;
+    position: absolute;
     top: 0px;
     left: 25px;
     right: 25px;
